# CSDmL

./: README.md  pyproject.toml  setup.old
csdml/: __init__.py
csdml/core/: activation_functions.py  deepOnet.py  deeponet.py  fcnn.py  generator.py  optax_modopt.py  trainer.py
csdml/core/FCNN_outputs/2025-01-22_17.22.49.673875/: modopt_results.out  slsqp_summary.out
csdml/core/FCNN_outputs/2025-01-23_11.14.43.884316/: modopt_results.out  slsqp_summary.out
csdml/core/FCNN_outputs/2025-01-23_11.18.16.394774/: modopt_results.out  slsqp_summary.out
csdml/core/FCNN_outputs/2025-01-23_11.23.36.503434/: modopt_results.out  slsqp_summary.out
csdml/core/FCNN_outputs/2025-01-23_11.25.05.671988/: modopt_results.out  slsqp_summary.out
csdml/core/neural_networks/: deepOnet.py  fcnn.py  neural_net.py  test.npz  test_neural_nets.py  train.npz
examples/: ex_induced_drag_minimization.py  sin.py
examples/WIP/structural_optimization/: c172_tri.msh_reconstructed.h5  c172_tri.msh_reconstructed.xdmf  do_net.py  ex_structural_optimization.py  fname  functions.py  install.bash  install_train.bash  params.pkl  pressure_eval_pts_2.txt  struct_opt_geo_test_01.hdf5  struct_opt_geo_test_02.hdf5  struct_opt_geo_test_03.hdf5  structural_geo.py  train_fcnn.py  train_fcnn_old.py  train_fcnn_old_2.py  viz.py
examples/WIP/structural_optimization/records/: record_E.h5  record_E.xdmf  record_F_solid.h5  record_F_solid.xdmf  (+10 more)
examples/structural_optimization/: do_net.py  ex_structural_optimization.py  functions.py  pressure_eval_pts.txt
examples/tscc_scripts/: deeponet_val.py
(+81 files in other folders)
